# AgentPM

./: .claudeignore  .claudeignore_format  .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  IMPLEMENTATION_REPORT.md  PROMPT.md  config.yaml  note_seo_aeo_analysis.py  pyproject.toml  validation_report.json
.claude/: project-settings.json
.cursor/: mcp.json
.github/: CONTRIBUTING.md
docs/: aipm_commands.md  bigquery_mcp_setup_guide.md  github_app_setup_guide.md  path_reference_correction_guide.md  sentry_mcp_setup_guide.md  slack_app_setup_guide.md
scripts/: .gitignore  add_knowledge_base_references.py  add_knowledge_base_references_v2.py  add_yaml_fields_forstartup.py  add_yaml_frontmatter.py  aggregate_logs.sh  analyze_bookmark_features.py  analyze_conceptual_learning.py  analyze_multi_platform.py  analyze_sns_data.py  audit_forsolo_tier2_quality.py  auto_sns_post.py  batch_evaluate_bookmarks.py  batch_search_directors.py  batch_update_case_studies_b7.py  bookmark_value_evaluator.py  check_context_usage.sh  check_progress.sh  check_skill_yaml.py  claude_notify.sh  collect_director_names_batch4.py  customize_forstartup_skills.py  debug_x_html.py  deep_bookmark_analysis.py  evaluate_forstartup_final.py  fix_forstartup_path_references.py  fix_forstartup_path_references_final.py  fix_forstartup_path_references_v2.py  fix_template_structure.py  flow_to_stock_v2.sh  format_changed_file.sh  forsolo_improvement_log.txt  improve_forsolo_tier2_files.py  linkedin_analyzer.py  linkedin_scraper.py  measure_quality.py  monitor_progress.sh  (+28 more)
(+11188 files in other folders)
