# pyproject.toml - Python formatter configuration
# black and isort settings for aipm_v0 project

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Standard excludes
  \.git
  | \.venv
  | venv
  | env
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | \.eggs
  | \.tox

  # Project-specific excludes
  | Flow/
  | Archived/
  | node_modules/
  | \.claude/
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
extend_skip = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "Flow",
    "Archived",
    "node_modules",
    ".claude"
]

# Section ordering
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["aipm"]

# Group imports
force_sort_within_sections = true
lexicographical = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
